Spacing tweaks and fix thumbnails src url

--- a/danpoynorcom/portfolio/assets/scss/partials/_headers.scss
+++ b/danpoynorcom/portfolio/assets/scss/partials/_headers.scss
@@ -27,7 +27,6 @@ main {
     .taxonomy-meta {
 
         // taxonomy term descriptions
-        //margin-bottom: 1.5em;
         p:first-of-type {
             margin-top: .5em;
         }
@@ -38,6 +37,12 @@ main {
     }
 }
 
-article + header {
-    margin-top: 0; // some articles include .intro content which already has some margin assigned
+article {
+    > header {
+        padding-top: 2rem;
+    }
+
+    + header {
+        margin-top: 0; // some articles include .intro content which already has some margin assigned   
+    }
 }
