--- a/danpoynorcom/portfolio/assets/scss/partials/_structure.scss
+++ b/danpoynorcom/portfolio/assets/scss/partials/_structure.scss
@@ -131,6 +131,7 @@ body {
 
     .project-details {
         flex: 0 0 35.1945854483926%; // 416px / 1182
+        padding-bottom: 2rem;
     }
 }
 
